[package]
name = "neon_event_queue"
version = "0.1.0"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_event_queue"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = { version = "0.7.0", default-features = false, features = ["napi-4", "event-queue-api"] }
